--- a/the-Impossible-remake/index.html
+++ b/the-Impossible-remake/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <canvas id="myCanvas"></canvas>
+  <!-- <canvas id="myCanvas"></canvas> -->
   <script src="./build.js"></script>
 </body>
 
