Added in next level functionality

--- a/train-problem/index.html
+++ b/train-problem/index.html
@@ -6843,7 +6843,7 @@ function load_game(gameData, defaultFontData, startWithTitle) {
 	onready(startWithTitle);
 }
 
-function nextLevel() {git p
+function nextLevel() {
 	if (input.anyKeyPressed() || input.isTapReleased()) {
 			/* RESTART GAME */
 			console.log("The End of this level, thanks for playing!");
