Added instructions text, increased timeouts, updated readme

--- a/escaping-duck/index.html
+++ b/escaping-duck/index.html
@@ -52,6 +52,11 @@
         <div class="soundIndicator"></div>
       </div>
     </div>
+    <div class="instructionsText">
+      <div>Click on the screen to enable sound</div>
+      <div>Allow access to microphone</div>
+      <div>Move with ⬅️ and ➡️</div>
+    </div>
     <a-scene
       id="sceneGame"
       vr-mode-ui="false"
@@ -132,13 +137,13 @@
         font-image="assets/fonts/Electrolize-Regular.png"
         negate="false"
         opacity="0"
-        animation__fadein="property: text.opacity; from: 0; to: 1; delay: 2000"
-        animation__fadeout="property: text.opacity; from: 1; to: 0; delay: 5000"
+        animation__fadein="property: text.opacity; from: 0; to: 1; delay: 6000"
+        animation__fadeout="property: text.opacity; from: 1; to: 0; delay: 9000"
       >
       </a-text>
       <a-text
         id="collectText"
-        value="Collect letters to escape"
+        value="Collect H Y P E R to escape"
         position="0 20 40"
         scale="4 4 4"
         color="turquoise"
@@ -147,8 +152,8 @@
         font-image="assets/fonts/Electrolize-Regular.png"
         negate="false"
         opacity="0"
-        animation__fadein="property: text.opacity; from: 0; to: 1; delay: 6000"
-        animation__fadeout="property: text.opacity; from: 1; to: 0; delay: 12000"
+        animation__fadein="property: text.opacity; from: 0; to: 1; delay: 10000"
+        animation__fadeout="property: text.opacity; from: 1; to: 0; delay: 16000"
       >
       </a-text>
       <a-text
@@ -162,8 +167,8 @@
         font-image="assets/fonts/Electrolize-Regular.png"
         negate="false"
         opacity="0"
-        animation__fadein="property: text.opacity; from: 0; to: 1; delay: 7500"
-        animation__fadeout="property: text.opacity; from: 1; to: 0; delay: 12000"
+        animation__fadein="property: text.opacity; from: 0; to: 1; delay: 11500"
+        animation__fadeout="property: text.opacity; from: 1; to: 0; delay: 16000"
       >
       </a-text>
       <a-text
@@ -177,8 +182,8 @@
         font-image="assets/fonts/Electrolize-Regular.png"
         negate="false"
         opacity="0"
-        animation__fadein="property: text.opacity; from: 0; to: 1; delay: 9000"
-        animation__fadeout="property: text.opacity; from: 1; to: 0; delay: 12000"
+        animation__fadein="property: text.opacity; from: 0; to: 1; delay: 13000"
+        animation__fadeout="property: text.opacity; from: 1; to: 0; delay: 16000"
       >
       </a-text>
       <a-text
@@ -192,8 +197,8 @@
         font-image="assets/fonts/Electrolize-Regular.png"
         negate="false"
         opacity="0"
-        animation__fadein="property: text.opacity; from: 0; to: 1; delay: 20000"
-        animation__fadeout="property: text.opacity; from: 1; to: 0; delay: 23000"
+        animation__fadein="property: text.opacity; from: 0; to: 1; delay: 24000"
+        animation__fadeout="property: text.opacity; from: 1; to: 0; delay: 27000"
       >
       </a-text>
       <a-text
