--- a/escaping-duck/index.html
+++ b/escaping-duck/index.html
@@ -26,6 +26,27 @@
       href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap"
       rel="stylesheet"
     />
+    <meta charset="utf-8" />
+    <link rel="icon" href="assets/images/favicon.svg" />
+
+    <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="Escaping Duck" />
+    <meta name="author" content="Valeria Shadrina" />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://escapefromhyperisland.github.io/team1-chaos/escaping-duck/assets/images/escaping-duck.png"
+    />
+    <meta
+      name="og:description"
+      content="Escape from Hyper Island game project"
+    />
+    <meta
+      property="og:url"
+      content="https://escapefromhyperisland.github.io/team1-chaos/escaping-duck/"
+    />
+    <meta property="og:type" content="website" />
+    <title>Escaping Duck</title>
   </head>
   <body>
     <div class="statusBar">
@@ -53,9 +74,9 @@
       </div>
     </div>
     <div class="instructionsText">
-      <div>Click on the screen to enable sound</div>
-      <div>Allow access to microphone</div>
-      <div>Move with ⬅️ and ➡️</div>
+      <div class="instructionsLines">Click on the screen to enable sound</div>
+      <div class="instructionsLines">Allow access to microphone</div>
+      <div class="instructionsLines">Move with ⬅️ and ➡️</div>
     </div>
     <a-scene
       id="sceneGame"
